Fix taxonomy collapsible spacing bottom

--- a/css/src/admin/admin.css
+++ b/css/src/admin/admin.css
@@ -6,6 +6,10 @@
 	margin-bottom: 32px;
 }
 
+.yoast-space--bottom {
+	padding-bottom: 16px;
+}
+
 .wpseotab > * {
 	margin-left: auto;
 	margin-right: auto;
